Fri Oct 17 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/defaults.cc:  Patched to fix bug #823455
      Escaped "$" in valid_punctuation, and add warnings about $, \ and `.

Wed Oct 15 11:12:52 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdig/Server.cc (robotstxt): Patched to fix bug #765726.
      Don't block paths with subpaths excluded by robots.txt, and make
      sure any regex meta characters are properly escaped.

Tue Oct 14 11:54:07 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htnet/HtHTTP.cc: add an empty Accept-Encoding header - this inform the
    server that htdig is only able to manage documents that are not encoded
    (if no Accept-Encoding is sent, the server assumes that the client is
    capable of handling every content encoding - i.e. zipped documents with
    Apache's mod_gzip module). Partial fix of bug #594790 (which now becomes a
    feature request)

Mon Oct 13 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htfuzzy/Regex.cc:  Search for regular expression.  (Used to ignore it!)

    * htfuzzy/Speling.cc, htword/{WordList.cc,WordList.h,WordKey.cc,WordKey.h}:
      When looking in word database for misspelt words, don't ask to match
      trailing numeric fields in database key.

    * htcommon/defaults.cc, htdoc/htfuzzy.cc: Update docs.

Sun Oct 12 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/htsearch.cc:
      Fix bug if fuzzy algorithms produced no search words.
      Send all debugging output to  cerr  not  cout.  More debugging output.

Sun Oct 12 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/{Retriever,Server}.cc: Back out the previous.
      Gilles pointed out inconsistency with Retriever::IsValidURL().

Sun Oct  5 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/{Retriever,Server}.cc: Jim Cole's patch to bug #765726.
      Don't block paths with subpaths excluded by robots.txt.
